--- a/lib/icewm-session.desktop
+++ b/lib/icewm-session.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Type=Application
 Name=IceWM Session
 Name[da]=IceWM-session
+Name[sv]=IceWM-session
 Name[de]=IceWM-Sitzung
 Name[es]=Sesión de IceWM
 Name[id]=Sesi IceWM
@@ -13,6 +14,7 @@ Name[ru]=Сеанс IceWM
 Name[uk]=Сеанс IceWM
 GenericName=Window Manager
 GenericName[da]=Vindueshåndtering
+GenericName[sv]=Fönsterhanterare
 GenericName[de]=Fenstermanager IceWM
 GenericName[es]=Administrador de ventanas
 GenericName[fr]=Gestionnaire de Fenêtres
