--- a/README.md.in
+++ b/README.md.in
@@ -73,7 +73,7 @@ Prerequisites
 
 Building from tarball requires:
 
- - gcc or clang or any compiler supporting C++11 with C99 extensions (at least flexible array members)
+ - gcc or clang (or C++11 with C99 support)
  - imlib2 or libgdkpixbuf
  - libxcomposite
  - libxdamage
@@ -88,12 +88,12 @@ Building from git also requires:
 
  - complete autoconf or cmake toolchain
  - either markdown or asciidoctor
- - pod2man (from Perl)
+ - pod2man
 
 For optional features:
 
-  - libjpeg, libpng, librsvg or NanoSVG (depending on the graphics library choice)
-  - gettext, libfribidi (for localization)
+  - libjpeg, libpng, librsvg or nanosvg
+  - gettext, libfribidi
 
 Configuring IceWM
 -----------------
