Make location of nanosvg header customizable
This also simplifies the use of externally located nanosvg headers, for
example for offline builds.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -250,10 +250,14 @@ if (CONFIG_LIBRSVG)
 endif()
 
 if (CONFIG_NANOSVG)
+    if(NOT NANOSVG_DIR)
+        set(NANOSVG_DIR ${CMAKE_SOURCE_DIR}/src)
+    endif()
+    include_directories(${NANOSVG_DIR})
     set(hub https://raw.githubusercontent.com/memononen/nanosvg/master/src)
     foreach(nano nanosvg.h nanosvgrast.h)
-        message(STATUS "Checking for src/${nano}")
-        set(src ${CMAKE_SOURCE_DIR}/src/${nano})
+        message(STATUS "Checking for ${NANOSVG_DIR}/${nano}")
+        set(src "${NANOSVG_DIR}/${nano}")
         if (NOT EXISTS ${src})
             set(url ${hub}/${nano})
             file(DOWNLOAD ${url} ${src} INACTIVITY_TIMEOUT 3 STATUS down)
