Upgrade min.req. of CMake to version 3.10
Latest CMake releases started throwing warnings about deprecation of
old style compatibility.

Also removed the project tags from subfolders since they are ineffective
anyway.

Removed requirement of C compiler, since globit.c is the only source and
even this is wrapped into a C++ compilation unit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
 CMAKE_POLICY (SET CMP0053 NEW)
-PROJECT(ICEWM CXX C)
+PROJECT(ICEWM CXX)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
