Fix --disable-librsvg. Don't barf when --without-icesound. Update READMEs.

--- a/README.md.in
+++ b/README.md.in
@@ -56,6 +56,8 @@ like to spend the extra 15 seconds reading `./configure --help`, some compile
 time options can be turned on and off before the build.
 
 For general information on GNU's `./configure`, see the file [INSTALL][7].
+To disable sound support, use --without-icesound. When the image library
+supports SVG natively, you can use --disable-librsvg and --disable-nanosvg.
 
 Please see the [INSTALL][7] file for more detailed installation instructions.
 An alternative way to build IceWM using CMake is [documented here][19].
@@ -73,7 +75,7 @@ Prerequisites
 
 Building from tarball requires:
 
- - gcc or clang (or C++11 with C99 support)
+ - gcc or clang
  - imlib2 or libgdkpixbuf
  - libxcomposite
  - libxdamage
