--- a/src/config.cmake.h.in
+++ b/src/config.cmake.h.in
@@ -54,6 +54,7 @@
 #cmakedefine CONFIG_SHAPE 1
 #cmakedefine CONFIG_UNICODE_SET "@CONFIG_UNICODE_SET@"
 #cmakedefine HAVE_XINTERNATOMS 1
+#cmakedefine HAVE_XRES 1
 #cmakedefine CONFIG_XRANDR 1
 #cmakedefine CONFIG_XFREETYPE @CONFIG_XFREETYPE_VALUE@
 #cmakedefine CONFIG_COREFONTS 1
